# GBA-Emulator

./: .gitignore  CMakeLists.txt  README.md
arm7-cpu/: Makefile  buildcpu  myapp
arm7-cpu/src/: cpu.c  main.c  testing.c
arm7-cpu/src/include/: cpu.h  datasize.h  error.h  instructions.h  main.h  testing.h
asm/: assemble.sh  bios.elf  bios.s
asm/decompiler/: test.c  test.out
cmake/: FindLibElf.cmake
cpu/: Makefile  cmake_install.cmake
cpu/include/: cpu.h  data_sizes.h  instructions.h  requests.h  syscall.h
cpu/src/: CMakeLists.txt  Makefile  check_cpu.xml  cmake_install.cmake  cpu.c  syscall.c
display/: Makefile  cmake_install.cmake
display/include/: LCD-video-controller.h  display.h
display/src/: CMakeLists.txt  LCD-video-controller.c  Makefile  display.c
include/: main.h
src/: CMakeLists.txt  Makefile  bios.elf  main.c
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  check_cpu.c  check_cpu.xml  cmake_install.cmake
