cmake_minimum_required(VERSION 3.14)
project(GBA-Emulator VERSION 0.1.0 LANGUAGES C)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
add_subdirectory(display)
add_subdirectory(cpu)
include_directories(include)
add_subdirectory(src)
add_subdirectory(tests)
